--- a/2016-06-08/.project
+++ b/2016-06-08/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2016-06-08</name>
+	<name>TdP_esami-2016-06-08</name>
 	<comment></comment>
 	<projects>
 	</projects>
